[gd_scene load_steps=46 format=2]

[ext_resource path="res://scene/ennemy_1/turretEnemy.gd" type="Script" id=1]
[ext_resource path="res://assets/ennemi/gunner/Idle__000.png" type="Texture" id=2]
[ext_resource path="res://assets/ennemi/gunner/Idle__001.png" type="Texture" id=3]
[ext_resource path="res://assets/ennemi/gunner/Idle__002.png" type="Texture" id=4]
[ext_resource path="res://assets/ennemi/gunner/Idle__003.png" type="Texture" id=5]
[ext_resource path="res://assets/ennemi/gunner/Idle__004.png" type="Texture" id=6]
[ext_resource path="res://assets/ennemi/gunner/Idle__005.png" type="Texture" id=7]
[ext_resource path="res://assets/ennemi/gunner/Idle__006.png" type="Texture" id=8]
[ext_resource path="res://assets/ennemi/gunner/Idle__007.png" type="Texture" id=9]
[ext_resource path="res://assets/ennemi/gunner/Idle__008.png" type="Texture" id=10]
[ext_resource path="res://assets/ennemi/gunner/Idle__009.png" type="Texture" id=11]
[ext_resource path="res://assets/ennemi/gunner/Walk__000.png" type="Texture" id=12]
[ext_resource path="res://assets/ennemi/gunner/Walk__001.png" type="Texture" id=13]
[ext_resource path="res://assets/ennemi/gunner/Walk__002.png" type="Texture" id=14]
[ext_resource path="res://assets/ennemi/gunner/Walk__003.png" type="Texture" id=15]
[ext_resource path="res://assets/ennemi/gunner/Walk__004.png" type="Texture" id=16]
[ext_resource path="res://assets/ennemi/gunner/Walk__005.png" type="Texture" id=17]
[ext_resource path="res://assets/ennemi/gunner/Walk__006.png" type="Texture" id=18]
[ext_resource path="res://assets/ennemi/gunner/Walk__007.png" type="Texture" id=19]
[ext_resource path="res://assets/ennemi/gunner/Walk__008.png" type="Texture" id=20]
[ext_resource path="res://assets/ennemi/gunner/Walk__009.png" type="Texture" id=21]
[ext_resource path="res://assets/ennemi/gunner/Dead__000.png" type="Texture" id=22]
[ext_resource path="res://assets/ennemi/gunner/Dead__001.png" type="Texture" id=23]
[ext_resource path="res://assets/ennemi/gunner/Dead__002.png" type="Texture" id=24]
[ext_resource path="res://assets/ennemi/gunner/Dead__003.png" type="Texture" id=25]
[ext_resource path="res://assets/ennemi/gunner/Dead__004.png" type="Texture" id=26]
[ext_resource path="res://assets/ennemi/gunner/Dead__005.png" type="Texture" id=27]
[ext_resource path="res://assets/ennemi/gunner/Dead__006.png" type="Texture" id=28]
[ext_resource path="res://assets/ennemi/gunner/Dead__007.png" type="Texture" id=29]
[ext_resource path="res://assets/ennemi/gunner/Dead__008.png" type="Texture" id=30]
[ext_resource path="res://assets/ennemi/gunner/Dead__009.png" type="Texture" id=31]
[ext_resource path="res://assets/ennemi/gunner/Shoot__000.png" type="Texture" id=32]
[ext_resource path="res://assets/ennemi/gunner/Shoot__001.png" type="Texture" id=33]
[ext_resource path="res://assets/ennemi/gunner/Shoot__002.png" type="Texture" id=34]
[ext_resource path="res://assets/ennemi/gunner/Shoot__003.png" type="Texture" id=35]
[ext_resource path="res://assets/ennemi/gunner/Shoot__004.png" type="Texture" id=36]
[ext_resource path="res://assets/ennemi/gunner/Shoot__005.png" type="Texture" id=37]
[ext_resource path="res://assets/ennemi/gunner/Shoot__006.png" type="Texture" id=38]
[ext_resource path="res://assets/ennemi/gunner/Shoot__007.png" type="Texture" id=39]
[ext_resource path="res://assets/ennemi/gunner/Shoot__008.png" type="Texture" id=40]
[ext_resource path="res://assets/ennemi/gunner/Shoot__009.png" type="Texture" id=41]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": false,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "shoot",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 250.0

[sub_resource type="Animation" id=3]
resource_name = "damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "faded"
} ]
}

[node name="turretEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -2.66109, -6.79234 )
polygon = PoolVector2Array( -200.338, -42.2072, -155.338, -66.2073, -140.338, -204.207, -85.3383, -246.207, 209.662, -226.207, 210.662, -0.207202, 309.662, -1.2072, 355.662, 157.793, 430.662, 166.793, 453.662, 239.793, -450.339, 234.793, -411.339, 157.793, -285.339, -34.2072 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -2.66109, -6.79234 )
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="detectPlayer" type="Area2D" parent="."]
scale = Vector2( 6.84, 6.84 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectPlayer"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
cast_to = Vector2( 100, 100 )
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 3 )
anims/fade_out = SubResource( 4 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="detectPlayer" to="." method="_on_detectPlayer_body_entered"]
[connection signal="body_exited" from="detectPlayer" to="." method="_on_detectPlayer_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
